--- a/src/components/tags/TagPanel.css
+++ b/src/components/tags/TagPanel.css
@@ -10,12 +10,6 @@
   width: 100%;
   height: 100%;
   flex-shrink: 1;
-  overflow-y: hidden;
-}
-
-.TagPanel__allTags {
-  flex-shrink: 1;
-  overflow-y: auto;
 }
 
 .TagPanel__tags {
@@ -49,7 +43,6 @@
   display: flex;
   align-items: center;
   width: 100%;
-  overflow: hidden;
   height: 32px;
   min-height: 32px;
 }
